# qairon

./: .coveragerc  .gitignore  .python-version  CLAUDE.md  CSV_IMPORT.md  DEVSETUP.md  Dockerfile  LICENSE  README.md  SCALAR_OUTPUT_AUDIT.md  app.py  base.py  bin-testing.py  cascade_new_ids.py  db.py  dev-gunicorn.conf.py  dev_requirements.txt  docker-compose.yml  fixtures.py  fixtures.sh  pyproject.toml  qcli  requirements.txt  setup.cfg  setup.py
qairon/: .python_version  Dockerfile  app.py  base.py  create.sh  db.py  fixtures.sh  qcli  qcli.py  setup.cfg
qairon/controllers/: __init__.py  args.py  cli_controller.py  helm.py  rest_controller.py  schema.py  subnets.py
qairon/converters/: __init__.py
qairon/features/: environment.py  rest_controller.feature
qairon/migrations/: script.py.mako
qairon/models/: __init__.py  allocation.py  allocation_type.py  application.py  associations.py  build.py  capacity.py  config.py  config_template.py  config_template_type.py  deployment.py  deployment_proc.py  deployment_target.py  deployment_target_type.py  environment.py  fleet.py  fleet_type.py  language.py  network.py  partition.py  pop.py  pop_type.py  proc.py  provider.py  provider_type.py  region.py  release.py  repo.py  repo_type.py  service.py  stack.py  subnet.py  zone.py
qairon/plugins/: __init__.py
qairon/scripts/: foo  import.sh  import_regions.sh
qairon/templates/: base_list.html
qairon/views/: __init__.py  allocation_view.py  config_view.py  default_view.py  dep_target_view.py  deployment_proc_view.py  deployment_view.py  network_view.py  sti_view.py  (+4 more)
(+1693 files in other folders)
