[metadata]
name = qairon-cli
version = 1.0.3
author = Gabe E. Nydick
author_email = gnydick@nydick.net
description = CLI for single source of truth Qairon
; long_description = file: README.md
; long_description_content_type = text/markdown
url = https://github.com/gnydick/qairon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
