[metadata]
name = qairon-cli
version = 0.0.1
author = Gabe E. Nydick
author_email = gnydick@nydick.net
description = CLI for single source of truth Qairon
; long_description = file: README.md
; long_description_content_type = text/markdown
url = https://github.com/gnydick/qairon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =.
scripts =
    qcli

install_requires =
    argcomplete==1.12.3
    boto3==1.17.88
    botocore==1.20.88
    certifi==2021.5.30
    chardet==4.0.0
    click==8.0.1
    Flask==2.0.1
    idna==2.10
    itsdangerous==2.0.1
    Jinja2==3.0.1
    jmespath==0.10.0
    MarkupSafe==2.0.1
    python-dateutil==2.8.1
    requests==2.25.1
    s3transfer==0.4.2
    six==1.16.0
    urllib3==1.26.5
    Werkzeug==2.0.1



python_requires = >=3.9

[options.packages.find]
where = .


exclude =
    dist
    views*
    config
    models
    features*
    migrations*
    templates
